# BetterCallChain

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/bcc-client/: Cargo.toml
crates/bcc-client/src/: cli.rs  config.rs  error.rs  keystore.rs  lib.rs  main.rs  rpc.rs  split.rs  wallet.rs
crates/bcc-client/tests/: integration_docker.rs  keystore_tests.rs  rpc_tests.rs  wallet_tests.rs
crates/bcc-core/: Cargo.toml
crates/bcc-core/src/: error.rs  lib.rs
crates/bcc-core/src/consensus/: mod.rs  pos.rs
crates/bcc-core/src/crypto/: hash.rs  mod.rs  signature.rs
crates/bcc-core/src/store/: memory.rs  mod.rs
crates/bcc-core/src/types/: address.rs  block.rs  mod.rs  transaction.rs  validator.rs
crates/bcc-core/src/validation/: block.rs  mod.rs  transaction.rs
crates/bcc-core/tests/: consensus.rs  validation.rs
crates/bcc-node/: Cargo.toml
crates/bcc-node/src/: api.rs  config.rs  debug_event.rs  debug_ws.rs  error.rs  genesis.rs  ibd.rs  lib.rs  main.rs  mempool.rs  slot_ticker.rs  state.rs
crates/bcc-node/src/p2p/: connector.rs  handler.rs  mod.rs  protocol.rs  server.rs
crates/bcc-node/src/storage/: mod.rs  sled_store.rs
crates/bcc-node/tests/: mempool.rs  protocol.rs  sled_store.rs
docs/: bcc-client.md  bcc-core.md  bcc-node.md  bcc-visualizer.md
scripts/: gen-test-configs.sh
tools/bcc-visualizer/: Cargo.toml  Dockerfile
tools/bcc-visualizer/src/: api_routes.rs  config.rs  event_bus.rs  log_reader.rs  main.rs  node_client.rs  parser.rs  scenarios.rs  server.rs  ws_handler.rs
tools/bcc-visualizer/src/assets/: index.html
