[package]
name = "bcc-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "bcc_client"
path = "src/lib.rs"

[[bin]]
name = "bcc-client"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
bcc-core = { version = "0.1.0", path = "../bcc-core" }
clap = { version = "4.6.0", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
hex = "0.4.3"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "0.8", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

futures = "0.3"

[dev-dependencies]
mockito     = "1.7.2"
tempfile    = "3.27.0"
tokio-test  = "0.4.5"
