[package]
name = "bcc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
hex = "0.4.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
