[package]
name = "bcc-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "bcc_node"
path = "src/lib.rs"

[[bin]]
name = "bcc-node"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bcc-core = { path = "../bcc-core" }
bincode = "1"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
futures = "0.3.32"
hex = "0.4.3"
indexmap = "2.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time", "local-time"] }

[dev-dependencies]
proptest = "1.11.0"
tokio-test = "0.4.5"
