[package]
name = "bcc-visualizer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bcc-visualizer"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.8", features = ["ws"] }
tower-http    = { version = "0.6", features = ["cors"] }
tokio         = { version = "1", features = ["full"] }
tokio-util    = { version = "0.7", features = ["io", "codec"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
regex         = "1"
once_cell     = "1"
clap          = { version = "4", features = ["derive"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono        = { version = "0.4", features = ["serde"] }
reqwest       = { version = "0.13", default-features = false, features = ["json", "rustls"] }
anyhow        = "1"
futures       = "0.3"
lru           = "0.12"
bcc-core      = { path = "../../crates/bcc-core" }
bcc-client    = { path = "../../crates/bcc-client" }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
hex           = "0.4"
